--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Badar Abdullah - Portfolio</title>
   </head>
   <body>
     <noscript>
